# pyglenn

./: .gitignore  .pre-commit-config.yaml  DATABASE_DOCUMENTATION.txt  MANIFEST.in  README.md  README.txt  conversion_log.txt  logicofthermo.md  pyproject.toml  query_thermo_db.py  test_calculator.py  thermo_to_sqlite.py  thermochemical_calculator.py
.github/workflows/: ci.yml  docs.yml  publish-conda.yml  publish.yaml  publish.yml
Correcoes/: changelog_v0_1_10.md  demonstra_inconsistencias_pyglenn.py  relatorio_inconsistencias_pyglenn_v0_1_9.txt
conda.recipe/: meta.yaml
docs/: .gitignore  CONDA_WORKFLOW_SETUP.md  paper.md
docs/audit/: audit_code.py  pyglenn_vs_nist.csv  validation_summary.txt
docs/cheat_sheet/: cheat_sheet.md
docs/paper_zenodo/: citing-zenodo.bib  paper.md
docs/source/: api.rst  conf.py  database.rst  examples.md  index.rst  usage.rst  validation.rst
docs/source/_static/: custom.css
examples/: 01_basic_usage.ipynb  01_uso_basico.ipynb  02_fuel_comparison.ipynb  README.md  ideias.md
examples/extra/: README.md
src/pyglenn/: __init__.py  builder.py  calculator.py  cli.py  database.py
src/pyglenn/data/: __init__.py  thermo.db
src/pythermo/: __init__.py  calculator.py  cli.py
src/pythermo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_calculator.py
