[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyglenn"
version = "1.0.0"
description = "Thermochemical properties calculator — computes Cp(T), H°(T), S°(T) from NASA polynomial coefficients stored in SQLite"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Glenn", email = "profr@users.noreply.github.com"}
]
keywords = ["thermochemistry", "thermodynamics", "NASA-polynomials", "heat-capacity", "enthalpy", "entropy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/profr/pyglenn"
Repository = "https://github.com/profr/pyglenn"
Issues = "https://github.com/profr/pyglenn/issues"

[project.scripts]
pyglenn = "pyglenn.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyglenn = ["data/thermo.inp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
