[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyglenn"
dynamic = ["version"]
description = "Thermochemical properties calculator — computes Cp(T), H°(T), S°(T) from NASA polynomial coefficients stored in SQLite"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dr. Reginaldo G. Leão Jr.", email = "prof.reginaldo.leao@gmail.com"}
]
keywords = ["thermochemistry", "thermodynamics", "NASA-polynomials", "heat-capacity", "enthalpy", "entropy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
examples = [
    "jupyterlab>=4.0",
    "matplotlib>=3.7",
]
doc = [
    "sphinx>=7.0",
    "renku-sphinx-theme>=0.5.0",
    "myst-nb>=1.1.0",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://profleao.github.io/pyglenn"
Repository = "https://github.com/ProfLeao/pyglenn"
Issues = "https://github.com/ProfLeao/pyglenn/issues"

[project.scripts]
pyglenn = "pyglenn.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pyglenn.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyglenn = ["data/thermo.inp", "data/thermo.db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "T20", # flake8-print (keep print in CLI only)
]

[tool.ruff.lint.per-file-ignores]
"cli.py" = ["T201"]   # allow print() in CLI module

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.coverage.run]
source = ["src/pyglenn"]
omit = ["src/pyglenn/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "assert False",
    "raise NotImplementedError",
]
